--- a/test.html
+++ b/test.html
@@ -3,7 +3,6 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,187 +17,209 @@
       <link rel="shortcut icon" type="image/png" href="assets/favicon.PNG"/>
       <title>Ascent Shipping</title>
       <style>
-
-/*for button get a quote*/
-.quotebutton{
-  text-align: center;
+        /*button*/
+        
+.raise:hover,
+.raise:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+  color:red;
 }
 
-.btn-warning{
-  position: absolute;
-   top:90%;
-  left:40%;
+.raise {
+  --color: blue;
+  --hover: red;
 }
 
-/*End*/
-
-  html{
-    overflow-x: hidden;
-  }
-
-  body{
-    font-family: 'Bitter', serif;
-
-  }
-  .ocean_freight ul{
-    display: inline-table;
-  }
-
-  .ocean_freight{
-    padding:30px 40px 30px 0;
-    font-size: 20px;
-  }
-
-  .ocean_freight h2{
-    font-weight: 700;
-    color:#022638;
-  }
-
-  .row_one{
-    background-color:#fff;
-  }
- 
-/*SideBar Nav*/
-.sidebar {
-  margin: 50px 9px;
-  padding: 0;
-  /*width: 330px;*/
-  width:90%;
-  background-color: #f1f1f1;
-  height: 100%;
-  overflow: auto;
-  border:2px solid #022638;
+button {
+  color: var(--color);
+  transition: 0.25s;
 }
 
-.sidebar a {
-  display: block;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-    /* text-align: center; */
-     text-transform: capitalize; 
-    font-size: 14px;
-    font-weight: 700;
-    border-bottom: 0px solid #000000;
+button:hover, button:focus {
+  border-color: var(--hover);
+  color: red;
 }
 
-.sidebar a.active {
-  background-color: #022638;
-  color: #fff;
+button {
+  background: none;
+  border: 2px solid;
+  font: inherit;
+  line-height: 1;
+  margin: 0.5em;
+  padding: 1em 2em;
 }
 
-.sidebar a:hover:not(.active) {
-  background-color:#191919;
-  color: #fff;
-}
+        /*end button*/
+         html{
+         overflow-x: hidden;
+         }
+         body{
+         font-family: 'Bitter', serif;
+         }
 
-.ocean_freight li::before{
-  content:url("assets/dot.png");
-}
+        /* .well{
+          background-color: #000;
+         }*/
+         .ocean_freight ul{
+         display: inline-table;
+         }
+         .ocean_freight{
+         padding:30px 40px 30px 0;
+         font-size: 20px;
+         }
+         .ocean_freight h2{
+         font-weight: 700;
+         color:#022638;
+         }
+         .row_one{
+         background-color:#fff;
+         }
+         /*SideBar Nav*/
+         .sidebar {
+         margin: 50px 9px;
+         padding: 0;
+         width:90%;
+         background-color: #f1f1f1;
+         height: 100%;
+         overflow: auto;
+         border:2px solid blue;
+         }
+         .sidebar a {
+         display: block;
+         color: black;
+         padding: 16px;
+         text-decoration: none;
+         text-transform: capitalize; 
+         font-size: 14px;
+         font-weight: 700;
+         border-bottom: 0px solid #000000;
+         }
+         .sidebar a.active {
+         background-color: #022638;
+         color: #fff;
+         }
+         .sidebar a:hover:not(:last-child) {
+         background-color:#191919;
+         color: #fff;
+         }
 
-div.content {
-  padding: 1px 16px;
-}
-
-.inner-banner{
-    height: 400px;
-    background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
-</style>
+         .ocean_freight li::before{
+         content:url("assets/dot.png");
+         }
+         div.content {
+         padding: 1px 16px;
+         }
+         .inner-banner{
+         height: 400px;
+         background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: cover;
+         position: relative;
+         }
+         .hero-text {
+         text-align: center;
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+         color: white;
+         }
+      </style>
    </head>
    <body translate="no" >
       <nav class="navbar navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="col-md-3">
-       <a class="navbar-brand" href="#">
-       <img src="assets/logo.png" style="height: 80px; width: 200px; margin-left: 20px;">
-       </a>
-    </div>
-
-    <div class="col-md-9">
-      <div class="col-md-12">
-      <ul id="menu" style="padding: 14px;">
-        <li>&nbsp;&nbsp;<span class="glyphicon glyphicon-earphone"></span>044 4088 0000</li>&nbsp;  &nbsp;&nbsp;
-        <li><span class="glyphicon glyphicon-inbox"></span> shipping@ascent.com </li>&nbsp;
-      </ul>
-      </div>
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <!-- <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>      --> 
-        <span><img src="assets/collapse2.png" style="width: 30px;height: 30px;"><span>                 
-      </button>
-    </div>
-    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="">Services <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="services.html">International Freight Management</a></li>
-            <li><a href="projectcargoworldwide.html">Project Cargo Worldwide</a></li>
-            <li><a href="linearagency.html">Linear Agency</a></li>
-          </ul>
-        </li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right" style="margin-right: 20px;">
-      <li id="quote" class="quote" style="background-color:#0076bf;"><a href="getaquote.html" style="color:#fff;"><span class="glyphicon glyphicon-log-in"></span> Get a Quote</a></li>
-      </ul>
-    </div>
-  </div>
-  </div>
-</nav>
-
-<section class="inner-banner" >
-  <div class="hero-text">
-    <h1 style="font-size:50px">Services</h1>
-  </div>
-</section>
-
-      <div class="row row_one">
-        <div class="col-md-4 col-sm-12" >
-          <div class="sidebar">
-          <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a class="active" href="operations.html">RO RO Operations <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-
-         <button type="button" class="btn btn-primary btn-sm btn-block disabled" style="text-align: left; background-color: black;">
-         <button type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left; background-color: black;">
-         Call:</button>
-         <button type="button" class="btn btn-primary btn-sm btn-block" style="text-align: left;background-color: black;">Get a Quote</button>
-          </div>
-        </div>
-
-      <div class="col-md-8 col-sm-12 content ocean_freight">
-        <div class="container">
-        <h2>RO RO Operations </h2>
-        <p>Ro-Ro activities involves diversification of functions so as to understand the complexities involved in transporting Cars/trucks/Plant equipments globally without any delay , as getting space on a RO-RO vessel is the most complex task . Ascent with its strong market hold and presence ensures vehicles to be planned effectively on RO-RO vessels on time . We are regularly loading on CON –RO vessels providing the flexibility as per the needs of client.  
-        </p>
-        </div>
-
-      </div>
-    </div>
-
+         <div class="container-fluid">
+            <div class="col-md-3">
+               <a class="navbar-brand" href="index.html">
+               <img src="assets/logo.png" style="height: 80px; width: 200px; margin-left: 20px;">
+               </a>
+            </div>
+            <div class="col-md-9">
+               <div class="col-md-12">
+                  <ul id="menu" style="padding: 14px;">
+                     <li>&nbsp;&nbsp;<span class="glyphicon glyphicon-earphone"></span>044 4088 0000</li>
+                     &nbsp;  &nbsp;&nbsp;
+                     <li><span class="glyphicon glyphicon-inbox"></span> shipping@ascent.com </li>
+                     &nbsp;
+                  </ul>
+               </div>
+               <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span><img src="assets/collapse2.png" style="width: 30px;height: 30px;"><span>                 
+                  </button>
+               </div>
+               <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+                  <ul class="nav navbar-nav">
+                     <li class="active"><a href="index.html">Home</a></li>
+                     <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">Services <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                           <li><a href="services.html">International Freight Management</a></li>
+                           <li><a href="projectcargoworldwide.html">Project Cargo Worldwide</a></li>
+                           <li><a href="linearagency.html">Linear Agency</a></li>
+                        </ul>
+                     </li>
+                     <li><a href="contact.html">Contact Us</a></li>
+                  </ul>
+                  <ul class="nav navbar-nav navbar-right" style="margin-right: 20px;">
+                     <li id="quote" class="quote" style="background-color:#0076bf;"><a href="getaquote.html" style="color:#fff;"><span class="glyphicon glyphicon-log-in"></span> Get a Quote</a></li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+      </nav>
+      <section class="inner-banner" >
+         <div class="hero-text">
+            <h1 style="font-size:50px">Services</h1>
+         </div>
       </section>
-      <footer class="section footer-classic context-dark bg-image" style="background-color:#000;">
+      <div class="row row_one">
+         <div class="col-md-4 col-sm-12 ">
+            <div class="sidebar">
+               <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+               <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+               <a href="importexport.html">Import/Export Services and Customs Brokerage<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+               <a class="active" href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+               <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+               <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+              
+
+               <div class="buttons well">
+                 <a href="getaquote.html">
+                 <button class="raise">Get a quote</button></a>
+                 <button href="tel:04440880000" class="raise">Call: 044 4088 0000</button>
+               </div>
+
+               <!-- <div class="well">
+                  <button href="tel:04440880000" type="button" class="btn btn-primary btn-lg" style="text-align: left; background-color: #00a0e3;">Call: 044 4088 0000</button>
+                  <button href="getaquote.html" type="button" class="btn btn-primary btn-lg" style="text-align: left;background-color: #00a0e3;">Get a Quote</button>
+               </div> -->
+            </div>
+         </div>
+         <div class="col-md-8 col-sm-12 content ocean_freight" >
+            <h2>Transport Services</h2>
+            <p>Ascent excels pick up and Drop service worldwide for containerised and, Over dimension Movement, with vehicles available 24/7 in all our locations and agent locations, Rail movements interstate, ounties or even inter continent, for any cargo size from small box to Mega Equipments.</p>
+            <p><b> services include:</b> </p>
+            <ul>
+               <li>&nbsp;&nbsp;One source for all of your worldwide transportation needs</li>
+               <li>&nbsp;&nbsp;Offering individual or integrated services </li>
+               <li>&nbsp;&nbsp;Shipment visibility and materials tracking capability Our service covers. </li>
+               <li>&nbsp;&nbsp;Small Parcel Pick-up and delivery</li>
+               <li>&nbsp;&nbsp;Container Pick-up and delivery </li>
+               <li>&nbsp;&nbsp;High bed, Low Bed and Semi Low Bed Movement</li>
+               <li>&nbsp;&nbsp;ODC Movement </li>
+               <li>&nbsp;&nbsp;Rail and road combo</li>
+               <li>&nbsp;&nbsp;Inter country/Continents</li>
+               <li>&nbsp;&nbsp;Temperature Controlled movement </li>
+               <li>&nbsp;&nbsp;Escort for Cargo Services </li>
+               <li>&nbsp;&nbsp;Armed Escort for critical locations</li>
+            </ul>
+         </div>
+      </div>
+      </section>
+      <footer class="section footer-classic context-dark bg-image" style="background-color: #000">
          <div class="container" >
             <div class="row row-30">
                <div class="col-md-4 col-xl-5">
@@ -248,11 +269,68 @@ div.content {
          </div>
       </footer>
    </body>
-
-
-
-<style>
-
-
-</style>
+   <style>
+      @media screen and (max-width: 365px){
+      .sidebar{
+      margin:9px 0px;
+      width: 90%;
+      }
+      .ocean_freight {
+      margin-left: 16px;
+      }
+      div.content {
+      padding: 1px 10px;
+      }
+      }
+      @media screen and (max-width: 767px){
+      .sidebar{
+      width: 95%;
+      margin:50px 0;
+      }
+      }
+      @media screen and (max-width: 991px){
+      .ocean_freight ul{
+      margin-left: 50px;
+      }
+      .ocean_freight h2{
+      margin-left: 20px;
+      }
+      .ocean_freight p{
+      margin-left: 20px;
+      margin-right: 20px;
+      }
+      .sidebar{
+      width: 100%;
+      margin:50px 0;
+      }
+      }
+      @media screen and (min-width: 1900px){
+      .sidebar{
+      margin: 52px 52px;
+      }
+      div.col-md-8.col-sm-12.content.ocean_freight{
+      margin-top:30px;
+      padding-right:95px;
+      }
+      }
+      @media screen and (max-width:1500px){
+      p{
+      padding-right: 15px;
+      }
+      div.col-md-8.col-sm-12.content.ocean_freight{
+      margin-top:30px;
+      }
+      html{
+      overflow-x: hidden;
+      }
+      }
+      @media screen and (max-width:1900px){
+      p{
+      padding-right: 15px;
+      }
+      div.col-md-8.col-sm-12.content.ocean_freight{
+      margin-top:30px;
+      }
+      }
+   </style>
 </html>
